--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
-	<title>Site 21</title>
+	<title></title>
 </head>
 <body>
-	<div id="addition-top-menu">
-		<a href="">like</a>  <a href="">ghfghf</a>  <a href="">yhjhgf</a>
-	</div>
 	<div id="top-menu">
 		<div id="top-menu-btn1" class="top-menu-btn">
 			<b>Fifa2019</b>
@@ -90,8 +85,12 @@
 			</a>																														
 		</div>
 	</div>
-	<div class="middle"></div>
-	<div id="box3" class="box">
+	<div class="middle">
+<!-- 	<img src="4444.jpg">
+	<br>NISSAN GTR<br>
+	<a href="">
+		BUTTON -->
+		<div id="box3" class="box">
 			<div id="box3-card1" class="box3-card">
 				<img src="5555.png" id="box3-card1-img" class="box3-card-img">
 				<div id="box3-card1-gradient" class="box3-card-gradient"></div>
@@ -129,106 +128,8 @@
 					</a>	
 				</div>
 			</div>
-	</div>
-	<div class="middle"></div>
-	<div id="box4" class="box">
-		<div id="box4-more">
-			<div id="box4-more1" class="box4-more">
-				Значение: Имя Даниил является древнееврейским по происхождению. Произошло от слов «дани», что в переводе означает «мой судья» и «эль» — Бог. Буквальная трактовка звучит как «мой судья – Бог» или «Божий суд». Мужское имя Даниил, некогда пользовавшееся популярностью во всех странах СНГ, сегодня используется редко. Но, новоиспеченным родителям, желающим воспитать истинного оптимиста, позитивного и сеющего вокруг улыбку человека, стоит все же обратить на него внимание…Значение: Имя Дарья является персидским по происхождению. Произошло от мужского персидского имени Дарий. Буквальная трактовка этого имени звучит как «добронравная». По другой версии может трактоваться как «хранящая благо» или «отстаивающая Добро». Кстати, это имя может заменяться схожим – Дария. К слову, женское имя Дарья сегодня уже не пользуется такой популярностью, какой пользовалось ранее, но все еще числится в сотне популярнейших женских русских имен. Оно имеет очень сильную энергетику, сулит много хорошего, и что не менее важно, имеет очень неплохую совместимость.
-				<br>
-				<table border="1" cellpadding="" cellspacing="">
-				<tr>
-					<th>Автор1</th>
-					<th>Про меня</th>
-				</tr>
-				<tr>
-					<th>Автор2</th>
-					<th>Про меня</th>
-				</tr>	
-				</table>
-			</div>
-			<div id="box4-more2" class="box4-more">
-				Значение: Имя Дарья является персидским по происхождению. Произошло от мужского персидского имени Дарий. Буквальная трактовка этого имени звучит как «добронравная». По другой версии может трактоваться как «хранящая благо» или «отстаивающая Добро». Кстати, это имя может заменяться схожим – Дария. К слову, женское имя Дарья сегодня уже не пользуется такой популярностью, какой пользовалось ранее, но все еще числится в сотне популярнейших женских русских имен. Оно имеет очень сильную энергетику, сулит много хорошего, и что не менее важно, имеет очень неплохую совместимость.
-					Значение: Имя Даниил является древнееврейским по происхождению. Произошло от слов «дани», что в переводе означает «мой судья» и «эль» — Бог. Буквальная трактовка звучит как «мой судья – Бог» или «Божий суд». Мужское имя Даниил, некогда пользовавшееся популярностью во всех странах СНГ, сегодня используется редко. Но, новоиспеченным родителям, желающим воспитать истинного оптимиста, позитивного и сеющего вокруг улыбку человека, стоит все же обратить на него внимание…
-					<br>
-					<table border="1" cellpadding="" cellspacing="">
-					<tr>
-						<th>Автор3</th>
-						<th>Про меня</th>
-					</tr>
-					<tr>
-						<th>Автор4</th>
-						<th>Про меня</th>
-					</tr>
-					</table>
-			</div>
-			<div id="box4-more3" class="box4-more">
-				Значение: Имя Даниил является древнееврейским по происхождению. Произошло от слов «дани», что в переводе означает «мой судья» и «эль» — Бог. Буквальная трактовка звучит как «мой судья – Бог» или «Божий суд». Мужское имя Даниил, некогда пользовавшееся популярностью во всех странах СНГ, сегодня используется редко. Но, новоиспеченным родителям, желающим воспитать истинного оптимиста, позитивного и сеющего вокруг улыбку человека, стоит все же обратить на него внимание…
-					Значение: Имя Дарья является персидским по происхождению. Произошло от мужского персидского имени Дарий. Буквальная трактовка этого имени звучит как «добронравная». По другой версии может трактоваться как «хранящая благо» или «отстаивающая Добро». Кстати, это имя может заменяться схожим – Дария. К слову, женское имя Дарья сегодня уже не пользуется такой популярностью, какой пользовалось ранее, но все еще числится в сотне популярнейших женских русских имен. Оно имеет очень сильную энергетику, сулит много хорошего, и что не менее важно, имеет очень неплохую совместимость.
-					<br>
-					<table border="1" cellpadding="" cellspacing="">
-					<tr>
-						<th>Автор5</th>
-						<th>Про меня</th>
-					</tr>
-					<tr>
-						<th>Автор6</th>
-						<th>Про меня</th>
-					</tr>
-					</table>
-			</div>
 		</div>
-		<div id="box4-simple">
-			<div id="box4-simple-buttons">
-				<div id="box4-simple-button1" class="box4-simple-button">
-					FIFA 2021
-				</div>
-				<div id="box4-simple-button2" class="box4-simple-button">
-					PLAY DEMO
-				</div>
-				<div id="box4-simple-button3" class="box4-simple-button">
-					WIKIPEDIA
-				</div>
-			</div>
-			<div id="box4-simple-content">
-				<div id="box4-simple-content1" class="box4-simple-content">
-					<img src="76767676.jpg">
-				</div>
-				<div id="box4-simple-content2" class="box4-simple-content">
-					<img src="611.jpg">
-				</div>
-				<div id="box4-simple-content3" class="box4-simple-content">
-					<img src="43434343.jpg">
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="box6" class="box">
-		<br>
-			<table cellspacing="10">
-				<tr>
-					<th><img src="777777.jpg"></th>
-					<th colspan="2" rowspan="2"></th>
-					<th><img src="111111.jpg"></th>
-				</tr>
-				<tr>
-					<th><img src="555555.jpg"></th>
-					<th><img src="666666.jpg"></th>
-					
-				</tr>
-				<tr>
-					<th><img src="666666.jpg"></th>
-					<th><img src="111111.jpg"></th>
-					<th><img src="555555.jpg"></th>
-					<th><img src="777777.jpg"></th>
-				</tr>
-			</table>
-		</div>
-	</div>
-	<div id="footer" class="box">
-		Site created by <a href="">Danylo</a>
-		<a href="footer/1.txt"> COOKIE policy</a>
-		<a href="footer/2.txt"> Private policy</a>
-	</div>
+	 </div>
+	</a>
 </body>
 </html>
