--- a/index.html
+++ b/index.html
@@ -1,135 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<meta charset="utf-8">
+	<title>Site228</title>
 </head>
 <body>
 	<div id="top-menu">
-		<div id="top-menu-btn1" class="top-menu-btn">
-			<b>Fifa2019</b>
-			<img src="2.svg" class="vec">
+		<div id="top-menu-left">
+			<a href=""><div id="top-menu-logo">
+				<img src="13.png" id="top-menu-logo-img">
+			</div></a>
 			<a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 44
+				<div id="top-menu-left-btn1" class="top-menu-left-btn">
+					<b>Игри</b>
+					<img src="https://www.callofduty.com/content/dam/atvi/callofduty/global/global-nav/arrow.svg" id="tml-btn1-vec">
+					<div id="tml-btn1-menu">
+						<a href="https://www.callofduty.">
+							<div id="tml-btn1-menu-field1" class="tml-btn1-menu-field">
+								<a href="https://www.callofduty.com/ru/warzone/download"><B>Call of Duty</B></a>
+							</div>
+						</a>
+						<a href="">
+							<div id="tml-btn1-menu-field2" class="tml-btn1-menu-field">
+								<a href="https://www.minecraft.net/ru-ru/"><B>Minecraft</B></a>
+							</div>
+						</a>
+						<a href="">
+							<div id="tml-btn1-menu-field3" class="tml-btn1-menu-field">
+							<a href="https://www.roblox.com/"><B>Roblox</B></a>
+							</div>
+						</a>
+						<a href="">
+							<div id="tml-btn1-menu-field4" class="tml-btn1-menu-field">
+								<a href="https://www.igromania.ru/game/series/1498/The_Witcher.html"><b>Відьмак</b></a>
+							</div>
+						</a>
+					</div>
 				</div>
 			</a>
 			<a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 45
+				<div id="top-menu-left-btn2" class="top-menu-left-btn">
+					<a href="https://www.bbc.com/ukrainian"><b>NEWS</b></a>
+
 				</div>
-			</a><a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 46
+			</a>
+			<a href="">
+				<div id="top-menu-left-btn3" class="top-menu-left-btn">
+						<a href="https://www.irakvetka.com/?gclid=CjwKCAjw5Ij2BRBdEiwA0Frc9V-d9vQW2p5q66R2VuXKaulFc0_WAYtm0gTyYZoWMlc7jy98CpvK7RoC5kkQAvD_BwE"><b>GALLERY</b></a>
+
+				</div>
+			</a>
+			<a href="">
+				<div id="top-menu-left-btn4" class="top-menu-left-btn">
+					<a href="https://en.wikipedia.org/wiki/Community_(TV_series)"><b>COMMYNITY</b></a>
+
 				</div>
 			</a>
 		</div>
-		<div id="top-menu-btn2" class="top-menu-btn">
-			<b>Fifa2020 PLAY</b>
-			<img src="2.svg" class="vec"><a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 44
-				</div>
-			</a>
+		<div id="top-menu-right">
+			<a href="https://www.office.com/">
+				<div id="top-menu-right-btn1" 
+				class="top-menu-right-btn">LOGIN</div></a>
+			<a href="https://elaut.com.ua/g9691572-svetilniki-avarijnye?gclid=CjwKCAjw5Ij2BRBdEiwA0Frc9ffdh56apCxWoRnwf9Mpt_n4wMy151RkpMjBW58jyL0-cM9h2luEvhoC_LsQAvD_BwE">
+				<div id="top-menu-right-btn2" 
+				class="top-menu-right-btn">EXIT</div></a>
 			<a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 45
-				</div>
-			</a><a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 46
+				<div id="top-menu-right-btn3" 
+				class="top-menu-right-btn">SIGN UP</div></a>
+			<a href="">
+				<div id="top-menu-right-btn4" class="top-menu-right-btn pretty-btn">
+					<div class="pretty-btn-line pretty-btn-line-top"></div>
+					<a href="https://rozetka.com.ua/tovary-dlya-doma/c2394287/">BUY Rozetka</a>
+					<div class="pretty-btn-line pretty-btn-line-bottom"></div>
 				</div>
 			</a>
 		</div>
-		<div id="top-menu-btn3" class="top-menu-btn">
-			<b>Fifa2020 BUY</b>
-			<img src="2.svg" class="vec"><a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 44
-				</div>
-			</a>
-			<a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 45
-				</div>
-			</a><a href="">
-				<div class="tmb-menu-btn">
-					BUTTON 46
-				</div>
-			</a>
+	</div>	
+		  	<div id="box1">
+		  		<img src="hqdefault (1).jpg" id="box1-img">
+		  		<div id="box1-title">
+		  			<img src="567.jpg" id="box1-title-img">
+		  				AVAILABLE NOW
+		  			<div id="box1-title-btn1" class="box1-title-btn pretty-btn">
+		  				<div class="pretty-btn-line pretty-btn-line-top"></div>
+		  				<a href="https://www.google.com/">MORE</a>
+						<div class="pretty-btn-line pretty-btn-line-bottom"></div>
+		  			</div>
+		  			<div id="box1-title-btn2" class="box1-title-btn pretty-btn">
+		  				<div class="pretty-btn-line pretty-btn-line-top"></div>
+		  				<a href="https://www.wizardingworld.com/">TRAILER</a>
+						<div class="pretty-btn-line pretty-btn-line-bottom"></div>
+		  			</div>
+		  		</div>
+		  </div>
+	</div>
+	<div id="box2">
+		<div id="box2-left">
+	
+			<div id="box2-left-title1" class="box2-left-title"><img src="4536365.gif" class="box2-left-title-img"></div>
+			<div id="box2-left-title2" class="box2-left-title"><img src="ers.gif" class="box2-left-title-img"></div>
+			<div id="box2-left-title3" class="box2-left-title"><img src="11111.gif" class="box2-left-title-img"></div>
+			<div id="box2-left-title4" class="box2-left-title"><img src="1920x1080 gif gta.gif" class="box2-left-title-img"></div>
+
+		</div>
+		<div id="box2-right">
+			<ul type="circle">
+				<h1>play</h1>
+				<li>mine</li>
+				<li>call of duty</li>
+				<li>ww</li>
+				<li>paper io</li>
+				<li>brawl stars</li>
+			</ul>
 		</div>
 	</div>
-	<div id="ad-box" class="box">
-		<img src="1.jpg" id="ad-box-img">
+	<div id="box3">
+			SUBSCRIBE A NEWS LETTER
+		<input type="" name="" id="box3-input" class="box3-element">
 		<a href="">
-
-			<div id="ad-box-btn" class="box1-title-btn simple-border-btn" >
-				PS3-PS4
+			<div id="box3-btn" class="box3-element pretty-btn">
+				<div class="pretty-btn-line pretty-btn-line-top"></div>
+				<a href="https://www.youtube.com/channel/UC2-fZwSwbxfYhPi7FDDX6_Q?view_as=subscriber">SUBSCRIBE</a>
+				<div class="pretty-btn-line pretty-btn-line-bottom"></div>
 			</div>
 		</a>
 	</div>
-	<div id="box1" class="box">
-		<img src="4.jpg" id="box1-img"> 
-		<div id="box1-title">
-			<div class="middle"></div>
-			<b>GO TOO</b><br>
-			like____<br>
-			<a href="">
-				<div id="box1-title-btn" class="box1-title-btn simple-border-btn">
-					TY ROOM
-				</div>
-				<div id="box1-title-btn" class="box1-title-btn simple-border-btn">
-					YOU GOT
-				</div>
-			</a>																														
-		</div>
-	</div>
-	<div class="middle">
-<!-- 	<img src="4444.jpg">
-	<br>NISSAN GTR<br>
-	<a href="">
-		BUTTON -->
-		<div id="box3" class="box">
-			<div id="box3-card1" class="box3-card">
-				<img src="5555.png" id="box3-card1-img" class="box3-card-img">
-				<div id="box3-card1-gradient" class="box3-card-gradient"></div>
-				<div id="box3-card1-tittle" class="box3-card-tittle">
-					<b>MARVEL</b><br>
-					telephone<br>
-					<a href="">
-						<div id="box3-card1-btn1" class="box3-card-btn simple-border-btn">
-							190986
-						</div>
-					</a>	
-					<a href="">
-						<div id="box3-card1-btn2" class="box3-card-btn simple-border-btn">
-							190986
-						</div>
-					</a>	
-				</div>
-			</div>
-				
-			<div id="box3-card2" class="box3-card">
-				<img src="3333.jpg" id="box3-card2-img" class="box3-card-img">
-				<div id="box3-card2-gradient" class="box3-card-gradient"></div>
-				<div id="box3-card2-tittle" class="box3-card-tittle">
-					<b>SUPERMAN</b><br>
-					computer<br>
-					<a href="">
-						<div id="box3-card2-btn1" class="box3-card-btn simple-border-btn">
-							190665
-						</div>
-					</a>	
-					<a href="">
-						<div id="box3-card2-btn2" class="box3-card-btn simple-border-btn">
-							190665
-						</div>
-					</a>	
-				</div>
-			</div>
-		</div>
-	 </div>
-	</a>
 </body>
 </html>
